change folder name

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Jahidul Islam</title>
 </head>
 <body>
-    <h1>This is personal web site for me</h1>
+    <h1>This is lkfdsll, personal web site for me</h1>
 </body>
 </html>
